--- a/index.html
+++ b/index.html
@@ -6,153 +6,177 @@
   <title>Chore Chart</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #ffe6f2;
-      color: #333;
       margin: 0;
-      padding: 0;
-    }
-
-    .chore-chart {
-      width: 80%;
-      max-width: 800px;
-      margin: 50px auto;
-      background-color: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      text-align: center;
-    }
-
-    .chore-chart h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #d63384;
-    }
-
-    .chore {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 15px 0;
       padding: 10px;
-      border: 1px solid #d63384;
-      border-radius: 10px;
-      background-color: #fff5fa;
     }
 
-    .chore input[type="checkbox"] {
-      transform: scale(1.5);
+    .chart-container {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 15px;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
     }
 
-    .chore-name {
-      flex: 1;
-      font-size: 1.2rem;
-      text-align: left;
-      margin-left: 10px;
+    .title {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      color: #d63384;
+      margin-bottom: 15px;
     }
 
-    .progress-bar {
-      flex: 2;
-      margin-left: 10px;
-      height: 15px;
-      background-color: #f8d7e0;
-      border-radius: 7px;
-      overflow: hidden;
+    .section {
+      margin-top: 15px;
     }
 
-    .progress-bar-inner {
-      height: 100%;
-      background-color: #d63384;
-      width: 0%;
-      transition: width 0.3s ease;
+    .section-title {
+      font-size: 16px;
+      margin-bottom: 8px;
+      color: #ff69b4;
     }
 
-    button {
-      background-color: #d63384;
+    .task-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .task {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 8px;
+      border: 1px solid #f2f2f2;
+      border-radius: 8px;
+      margin-bottom: 8px;
+      background-color: #ffe6f2;
+      font-size: 14px;
+    }
+
+    .task.completed {
+      background-color: #d1e7dd;
+    }
+
+    .task label {
+      flex-grow: 1;
+      cursor: pointer;
+    }
+
+    .task input[type="checkbox"] {
+      margin-right: 8px;
+    }
+
+    .reset-buttons {
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+    }
+
+    .reset-buttons button {
+      margin: 0 8px;
+      padding: 8px 16px;
+      background-color: #ff69b4;
       color: #fff;
       border: none;
-      padding: 10px 20px;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 1rem;
-      margin-top: 20px;
+      font-size: 14px;
     }
 
-    button:hover {
-      background-color: #b72a6c;
+    .reset-buttons button:hover {
+      background-color: #d63384;
     }
   </style>
 </head>
 <body>
-  <div class="chore-chart">
-    <h1>Weekly Chore Tracker</h1>
-    <div id="chores">
-      <!-- Chores will be dynamically added here -->
+  <div class="chart-container">
+    <div class="title">Chore Chart</div>
+
+    <!-- Daily Chores Section -->
+    <div class="section" id="daily-chores">
+      <div class="section-title">Daily Chores</div>
+      <ul class="task-list">
+        <li class="task"><input type="checkbox" id="dishes"><label for="dishes">Do the dishes</label></li>
+        <li class="task"><input type="checkbox" id="vacuum"><label for="vacuum">Vacuum the house</label></li>
+        <li class="task"><input type="checkbox" id="laundry-master"><label for="laundry-master">Laundry (Master Bedroom)</label></li>
+        <li class="task"><input type="checkbox" id="laundry-kyle"><label for="laundry-kyle">Laundry (Upstairs Bathroom)</label></li>
+        <li class="task"><input type="checkbox" id="laundry-twins"><label for="laundry-twins">Laundry (Twins' Room)</label></li>
+        <li class="task"><input type="checkbox" id="puppy-cleanup"><label for="puppy-cleanup">Clean up after puppy</label></li>
+      </ul>
     </div>
-    <button onclick="resetChores()">Reset Progress</button>
+
+    <!-- Weekly Chores Section -->
+    <div class="section" id="weekly-chores">
+      <div class="section-title">Weekly Chores</div>
+      <ul class="task-list">
+        <li class="task"><input type="checkbox" id="trash"><label for="trash">Take out the trash (Wednesday Night)</label></li>
+        <li class="task"><input type="checkbox" id="clean-bathrooms"><label for="clean-bathrooms">Clean the bathrooms</label></li>
+        <li class="task"><input type="checkbox" id="grocery-shopping"><label for="grocery-shopping">Grocery shopping</label></li>
+        <li class="task"><input type="checkbox" id="dust-furniture"><label for="dust-furniture">Dust the furniture</label></li>
+      </ul>
+    </div>
+
+    <!-- Monthly Chores Section -->
+    <div class="section" id="monthly-chores">
+      <div class="section-title">Monthly Chores</div>
+      <ul class="task-list">
+        <li class="task"><input type="checkbox" id="deep-clean-kitchen"><label for="deep-clean-kitchen">Deep clean the kitchen</label></li>
+        <li class="task"><input type="checkbox" id="garage-organize"><label for="garage-organize">Organize the garage</label></li>
+        <li class="task"><input type="checkbox" id="wash-windows"><label for="wash-windows">Wash windows</label></li>
+        <li class="task"><input type="checkbox" id="clean-out-closets"><label for="clean-out-closets">Clean out closets</label></li>
+      </ul>
+    </div>
+
+    <!-- Reset Buttons -->
+    <div class="reset-buttons">
+      <button onclick="resetTasks('daily')">Reset Daily</button>
+      <button onclick="resetTasks('weekly')">Reset Weekly</button>
+      <button onclick="resetTasks('monthly')">Reset Monthly</button>
+    </div>
   </div>
 
   <script>
-    // List of chores
-    const chores = [
-      { name: "Clean the kitchen", completed: 0 },
-      { name: "Do the laundry", completed: 0 },
-      { name: "Vacuum the house", completed: 0 },
-      { name: "Water the plants", completed: 0 },
-      { name: "Take out the trash", completed: 0 }
-    ];
+    const saveProgress = () => {
+      const tasks = document.querySelectorAll('.task input[type="checkbox"]');
+      const taskStates = {};
+      tasks.forEach(task => taskStates[task.id] = task.checked);
+      localStorage.setItem('choreProgress', JSON.stringify(taskStates));
+    };
 
-    const choreContainer = document.getElementById("chores");
-
-    // Function to render the chores
-    function renderChores() {
-      choreContainer.innerHTML = "";
-      chores.forEach((chore, index) => {
-        const choreElement = document.createElement("div");
-        choreElement.className = "chore";
-
-        // Chore checkbox
-        const checkbox = document.createElement("input");
-        checkbox.type = "checkbox";
-        checkbox.checked = chore.completed === 100;
-        checkbox.onchange = () => toggleChore(index);
-
-        // Chore name
-        const choreName = document.createElement("div");
-        choreName.className = "chore-name";
-        choreName.textContent = chore.name;
-
-        // Progress bar
-        const progressBar = document.createElement("div");
-        progressBar.className = "progress-bar";
-        const progressBarInner = document.createElement("div");
-        progressBarInner.className = "progress-bar-inner";
-        progressBarInner.style.width = `${chore.completed}%`;
-        progressBar.appendChild(progressBarInner);
-
-        // Append elements to chore
-        choreElement.appendChild(checkbox);
-        choreElement.appendChild(choreName);
-        choreElement.appendChild(progressBar);
-        choreContainer.appendChild(choreElement);
+    const loadProgress = () => {
+      const taskStates = JSON.parse(localStorage.getItem('choreProgress')) || {};
+      const tasks = document.querySelectorAll('.task input[type="checkbox"]');
+      tasks.forEach(task => {
+        task.checked = taskStates[task.id] || false;
+        if (task.checked) {
+          task.closest('.task').classList.add('completed');
+        }
       });
-    }
+    };
 
-    // Toggle chore completion
-    function toggleChore(index) {
-      chores[index].completed = chores[index].completed === 0 ? 100 : 0;
-      renderChores();
-    }
+    const resetTasks = (category) => {
+      const tasks = document.querySelectorAll(`#${category}-chores .task input[type="checkbox"]`);
+      tasks.forEach(task => {
+        task.checked = false;
+        task.closest('.task').classList.remove('completed');
+      });
+      saveProgress();
+    };
 
-    // Reset all chores
-    function resetChores() {
-      chores.forEach((chore) => (chore.completed = 0));
-      renderChores();
-    }
-
-    // Initial render
-    renderChores();
+    document.addEventListener('DOMContentLoaded', () => {
+      loadProgress();
+      const tasks = document.querySelectorAll('.task input[type="checkbox"]');
+      tasks.forEach(task => {
+        task.addEventListener('change', () => {
+          task.closest('.task').classList.toggle('completed', task.checked);
+          saveProgress();
+        });
+      });
+    });
   </script>
 </body>
 </html>
